[package]
name = "servo-in-glarea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoxy = "0.1.0"
gleam = "0.15"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_14"] }
libloading = "0.8.6"
rustls = { version = "0.23" }
servo = { path = "../servo/components/servo", package = "libservo", features = [
  "background_hang_monitor",
] }
url = "2.5"
